--- a/backend/package.json
+++ b/backend/package.json
@@ -5,17 +5,19 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch src/server.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
-    "migrate:make": "knex migrate:make --knexfile knexfile.cjs -x ts",
-    "migrate:latest": "knex migrate:latest --knexfile knexfile.cjs",
-    "migrate:rollback": "knex migrate:rollback --knexfile knexfile.cjs",
-    "migrate:status": "knex migrate:status --knexfile knexfile.cjs",
-    "seed:make": "knex seed:make --knexfile knexfile.cjs -x ts",
-    "seed:run": "knex seed:run --knexfile knexfile.cjs",
+    "start": "node dist/server.js",
+    "test": "jest --detectOpenHandles --forceExit",
+    "test:watch": "jest --watch",
+    "migrate": "knex migrate:latest",
+    "migrate:rollback": "knex migrate:rollback",
+    "seed": "knex seed:run",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
     "db:reset": "npm run migrate:rollback && npm run migrate:latest && npm run seed:run",
-    "test:connection": "tsx src/config/database.ts"
+    "test:connection": "tsx src/config/database.ts",
+    "tsc:check": "tsc --noEmit"
   },
   "keywords": [
     "chocolate",
@@ -28,25 +30,37 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.6",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "pg": "^8.11.3",
+    "uuid": "^13.0.0",
+    "winston": "^3.19.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/cookie-parser": "^1.4.6",
-    "@types/cors": "^2.8.17",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
+    "@types/express-rate-limit": "^5.1.3",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.19.30",
     "@types/pg": "^8.10.9",
+    "@types/supertest": "^6.0.3",
+    "@types/uuid": "^10.0.0",
+    "eslint": "^9.39.2",
+    "jest": "^30.2.0",
+    "supertest": "^7.2.2",
+    "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
-    "tsx": "^4.7.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.3.3"
   },
   "engines": {
