--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,8 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "pg": "^8.11.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^13.0.0",
     "winston": "^3.19.0",
     "zod": "^3.22.4"
@@ -54,6 +56,8 @@
     "@types/node": "^20.19.30",
     "@types/pg": "^8.10.9",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "@types/uuid": "^10.0.0",
     "eslint": "^9.39.2",
     "jest": "^30.2.0",
