refactor(backend): architectural overhaul, concurrency safety, and test standardization
Major backend refactor to align with enterprise production standards.

1. Architecture & Build

- Reorganized directory structure: moved infrastructure configs to .config/ and tests to tests/.

- Split TypeScript config into tsconfig.json and tsconfig.build.json.

- Consolidated maintenance scripts into scripts/.

2. Performance & Integrity

- Implemented FOR UPDATE row locking in SalesService.

- Refactored SalesController export to use Node.js Streams.

- Optimized SalesRepository queries via Promise.all.

3. Quality Assurance

- Implemented transactional repository test suite.

- Standardized logging.

4. API Exposure

- Finalized sales.routes.ts with RBAC middleware.

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,13 +6,13 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json",
     "start": "node dist/server.js",
-    "test": "jest --detectOpenHandles --forceExit",
-    "test:watch": "jest --watch",
-    "migrate": "knex migrate:latest",
-    "migrate:rollback": "knex migrate:rollback",
-    "seed": "knex seed:run",
+    "test": "jest --config .config/jest.config.ts --detectOpenHandles --forceExit",
+    "test:watch": "jest --config .config/jest.config.ts --watch",
+    "migrate": "knex migrate:latest --knexfile .config/knexfile.ts",
+    "migrate:rollback": "knex migrate:rollback --knexfile .config/knexfile.ts",
+    "seed": "knex seed:run --knexfile .config/knexfile.ts",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "db:reset": "npm run migrate:rollback && npm run migrate:latest && npm run seed:run",
@@ -29,6 +29,7 @@
   "author": "ChocoOps Team",
   "license": "MIT",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
@@ -36,9 +37,12 @@
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
+    "ioredis": "^5.9.2",
+    "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "pg": "^8.11.3",
+    "socket.io": "^4.8.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^13.0.0",
@@ -55,6 +59,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.19.30",
     "@types/pg": "^8.10.9",
+    "@types/socket.io": "^3.0.1",
     "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
